Change to work with classloaders that do not return all the jars in the getProperties() method.